--- a/configs/windows.settings.json
+++ b/configs/windows.settings.json
@@ -3,7 +3,8 @@
     "file:///c%3A/Users/Irfanadziri/.vscode/extensions/atlassian.atlascode-3.0.10/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
   },
   "workbench.colorTheme": "Catppuccin Mocha",
-  "editor.fontFamily": "Ubuntu Mono",
+  "editor.fontFamily": "Operator Mono Lig",
+  "editor.fontLigatures": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.tabSize": 2,
   "editor.lineHeight": 1.8,
@@ -24,7 +25,7 @@
   "terminal.integrated.env.windows": {
     "PATH": "C:\\Program Files\\Python312\\Scripts\\;C:\\Program Files\\Python312\\;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Program Files\\Microsoft VS Code\\bin;C:\\Program Files\\NVIDIA Corporation\\NVIDIA NvDLISR;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Program Files\\Git\\cmd;C:\\Users\\Irfanadziri\\AppData\\Roaming\\nvm;C:\\Program Files\\nodejs;C:\\Users\\Irfanadziri\\AppData\\Roaming\\nvm\\v20.15.1\\yarn;C:\\Users\\Irfanadziri\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\Irfanadziri\\AppData\\Local\\GitHubDesktop\\bin;C:\\Users\\Irfanadziri\\.bun\\bin;${env:PATH}"
   },
-  "terminal.integrated.fontFamily": "monospace",
+  "terminal.integrated.fontFamily": "Operator Mono Lig",
   "yaml.customTags": [
     "!Equals sequence",
     "!FindInMap sequence",
